--- a/animais.html
+++ b/animais.html
@@ -55,11 +55,11 @@
     </div>
   </header>
   <!--Começo da galeria de imagens-->
-  <div id="galeria" class="container-galeria">
+  <div id="galeria" class="container-galeria_animais">
     <ul class="galeria">
       <li>
         <a href="fotos-animais/20200704155239_IMG_0031.jpg" target="_blank"><img class="foto"
-            src="fotos-animais/20200704155239_IMG_0031.jpg" alt="Gato" /></a>
+          data-src="fotos-animais/20200704155239_IMG_0031.jpg" alt="Gato" /></a>
         <p>Nico</p>
       </li>
     </ul>
