--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h1>Sejam bem-vindos ao universo da imaginação<span class="barra">_</span></h1>
         <h4>Imagens espetaculares criadas de artistas para artistas.</h4>
 
-        <form action="#" method="post" target="_blank">
+        <form action="../projeto-coffee-break/index.html" method="post" target="_blank">
           <div class="procura">
             <input type="search" onblur="desfocar()" onfocus="focar()"  name="search" id="procura" placeholder="Buscar...">
             <input type="submit" value="&#128269;" id="btn">
@@ -80,51 +80,51 @@
   <div id="galeria" class="container-galeria">
     <ul class="galeria">
       <li>
-        <a href="background/1080.jpg" target="_blank"><img class="foto" src="background/1080.jpg"
+        <a href="background/1080.jpg" target="_blank"><img class="foto" data-src="background/1080.jpg"
             alt="Navegando no espaço" /></a>
         <p>A felicidade pode ser encontrada mesmo nas horas mais difíceis, se você lembrar de acender a luz.</p>
       </li>
       <li>
-        <a href="background/spacecar.jpg" target="_blank"><img class="foto" src="background/spacecar.jpg"
+        <a href="background/spacecar.jpg" target="_blank"><img class="foto" data-src="background/spacecar.jpg"
             alt="Carro no espaço" /></a>
         <p>Carro espacial.</p>
       </li>
       <li>
-        <a href="background/blur.jpg" target="_blank"><img class="foto" src="background/blur.jpg" alt="Fotógrafo" /></a>
+        <a href="background/blur.jpg" target="_blank"><img class="foto" data-src="background/blur.jpg" alt="Fotógrafo" /></a>
         <p>A fotografia é uma das poucas coisas que tem poder sobre o tempo: ela o paralisa.</p>
       </li>
       <li>
-        <a href="background/tinta.jpg" target="_blank"><img class="foto" src="background/tinta.jpg"
+        <a href="background/tinta.jpg" target="_blank"><img class="foto" data-src="background/tinta.jpg"
             alt="Mulher em uma ventania" /></a>
         <p>E o vento levou.</p>
       </li>
       <li>
         <a href="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" target="_blank"><img class="foto"
-            src="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" alt="portal do tempo" /></a>
+          data-src="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" alt="portal do tempo" /></a>
         <p>Quando você olha muito tempo para o abismo, o abismo olha para você.</p>
       </li>
       <li>
-        <a href="background/web-min.jpg" target="_blank"><img class="foto" src="background/web-min.jpg"
+        <a href="background/web-min.jpg" target="_blank"><img class="foto" data-src="background/web-min.jpg"
             alt="apontando uma variha" /></a>
         <p>É leviosa e não leviosáaa</p>
       </li>
       <li>
-        <a href="background/kraken-min.jpg" target="_blank"><img class="foto" src="background/kraken-min.jpg"
+        <a href="background/kraken-min.jpg" target="_blank"><img class="foto" data-src="background/kraken-min.jpg"
             alt="kraken destruindo um navio" /></a>
         <p>kraken</p>
       </li>
       <li>
-        <a href="background/patron-min.jpg" target="_blank"><img class="foto" src="background/patron-min.jpg"
+        <a href="background/patron-min.jpg" target="_blank"><img class="foto" data-src="background/patron-min.jpg"
             alt="conjudando um patrono" /></a>
         <p>Expecto Patronum</p>
       </li>
       <li>
-        <a href="background/dudu.jpg" target="_blank"><img class="foto" src="background/dudu.jpg"
+        <a href="background/dudu.jpg" target="_blank"><img class="foto" data-src="background/dudu.jpg"
             alt="Executando o feitiço (leviosa)" /></a>
         <p>wingardium leviosa</p>
       </li>
       <li>
-        <a href="background/christmas.jpg" target="_blank"><img class="foto" src="background/christmas.jpg"
+        <a href="background/christmas.jpg" target="_blank"><img class="foto" data-src="background/christmas.jpg"
             alt="Natal" /></a>
         <p>Ah o natal... data que tudo fica de um jeitinho mágico. &#127877;&#127996;</p>
       </li>
@@ -140,23 +140,23 @@
           aparecerá no lado esquerdo da tela como na foto abaixo ou siga o link &#10145; <a
             href="https://helpx.adobe.com/br/photoshop/using/tools.html" target="_blank">Clique aqui para
             saber mais.</a>
-          <img src="dicas/painel.jpg" alt="Interface Photoshop">
+          <img class="foto" data-src="dicas/painel.jpg" alt="Interface Photoshop">
         </li>
         <li>Para entender como a seção de camadas funciona, pegue 2 fotos com fundo transparente(.png), clique
           em <strong>arquivos</strong> na barra superior da tela, depois clique em (novo) e escolha o tamanho da sua
           imagem... Fazendo isso, volte ao painel superior e clique em abrir e escolha as 2 imagens de formato(.png).
-          <img src="dicas/novo.jpg" alt="Interface Photoshop">
-          <img src="dicas/tamanho.jpg" alt="Interface Photoshop">
-          <img src="dicas/criar.jpg" alt="Interface Photoshop">
+          <img class="foto" data-src="dicas/novo.jpg" alt="Interface Photoshop">
+          <img class="foto" data-src="dicas/tamanho.jpg" alt="Interface Photoshop">
+          <img class="foto" data-src="dicas/criar.jpg" alt="Interface Photoshop">
         </li>
         <li>Após abrir, clique no cadeado ao lado da foto para destravar e arraste a foto para a página que você
           criou, faça isso com as 2 imagens.
-          <img src="dicas/arrasta.jpg" alt="Interface Photoshop">
+          <img class="foto" data-src="dicas/arrasta.jpg" alt="Interface Photoshop">
         </li>
         <li>Repare na camada de ajustes... você tem 2 fotinhas uma em baixo da outra... se clicar na fotinha de
           baixo e arrastar pra cima, essa imagem vai sobrepor a outra como mostra a foto abaixo.
-          <img src="dicas/camada1.jpg" alt="Interface Photoshop">
-          <img src="dicas/camada2.jpg" alt="Interface Photoshop">
+          <img class="foto" data-src="dicas/camada1.jpg" alt="Interface Photoshop">
+          <img class="foto" data-src="dicas/camada2.jpg" alt="Interface Photoshop">
         </li>
       </ol>
     </div>
