--- a/fantasia.html
+++ b/fantasia.html
@@ -55,69 +55,70 @@
     </div>
   </header>
   <!--Começo da galeria de imagens-->
-  <div id="galeria" class="container-galeria">
+  <div id="galeria" class="container-galeria_fantasia">
     <ul class="galeria">
       <li>
-        <a href="background/alien-cat.jpg" target="_blank"><img class="foto" src="background/alien-cat.jpg"
+        <a href="background/alien-cat.jpg" target="_blank"><img class="foto" data-src="background/alien-cat.jpg"
             alt="Gato sendo abduzido" /></a>
         <p>Abdução.</p>
       </li>
       <li>
-        <a href="background/olharAtento.jpg" target="_blank"><img class="foto" src="background/olharAtento.jpg"
+        <a href="background/olharAtento.jpg" target="_blank"><img class="foto" data-src="background/olharAtento.jpg"
             alt="Mulher observando uma fogueira" /></a>
         <p>Olhar atento.</p>
       </li>
       <li>
-        <a href="background/1080.jpg" target="_blank"><img class="foto" src="background/1080.jpg"
+        <a href="background/1080.jpg" target="_blank"><img class="foto" data-src="background/1080.jpg"
             alt="Navegando no espaço" /></a>
         <p>A felicidade pode ser encontrada mesmo nas horas mais difíceis, se você lembrar de acender a luz.</p>
       </li>
       <li>
-        <a href="background/spacecar.jpg" target="_blank"><img class="foto" src="background/spacecar.jpg"
+        <a href="background/spacecar.jpg" target="_blank"><img class="foto" data-src="background/spacecar.jpg"
             alt="Carro no espaço" /></a>
         <p>Carro espacial.</p>
       </li>
       <li>
-        <a href="background/SpaceMan.jpg" target="_blank"><img class="foto" src="background/SpaceMan.jpg"
+        <a href="background/SpaceMan.jpg" target="_blank"><img class="foto" data-src="background/SpaceMan.jpg"
             alt="Astronauta na lua" /></a>
         <p>Um pequeno passo para o homem mas um grande passo para a humanidade.</p>
       </li>
       <li>
-        <a href="background/blur.jpg" target="_blank"><img class="foto" src="background/blur.jpg" alt="Fotógrafo" /></a>
+        <a href="background/blur.jpg" target="_blank"><img class="foto" data-src="background/blur.jpg"
+            alt="Fotógrafo" /></a>
         <p>A fotografia é uma das poucas coisas que tem poder sobre o tempo: ela o paralisa.</p>
       </li>
       <li>
-        <a href="background/tinta.jpg" target="_blank"><img class="foto" src="background/tinta.jpg"
+        <a href="background/tinta.jpg" target="_blank"><img class="foto" data-src="background/tinta.jpg"
             alt="Mulher em uma ventania" /></a>
         <p>E o vento levou.</p>
       </li>
       <li>
         <a href="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" target="_blank"><img class="foto"
-            src="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" alt="portal do tempo" /></a>
+            data-src="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" alt="portal do tempo" /></a>
         <p>Quando você olha muito tempo para o abismo, o abismo olha para você.</p>
       </li>
       <li>
-        <a href="background/web-min.jpg" target="_blank"><img class="foto" src="background/web-min.jpg"
+        <a href="background/web-min.jpg" target="_blank"><img class="foto" data-src="background/web-min.jpg"
             alt="apontando uma variha" /></a>
         <p>É leviosa e não leviosáaa</p>
       </li>
       <li>
-        <a href="background/kraken-min.jpg" target="_blank"><img class="foto" src="background/kraken-min.jpg"
+        <a href="background/kraken-min.jpg" target="_blank"><img class="foto" data-src="background/kraken-min.jpg"
             alt="kraken destruindo um navio" /></a>
         <p>kraken</p>
       </li>
       <li>
-        <a href="background/patron-min.jpg" target="_blank"><img class="foto" src="background/patron-min.jpg"
+        <a href="background/patron-min.jpg" target="_blank"><img class="foto" data-src="background/patron-min.jpg"
             alt="conjudando um patrono" /></a>
         <p>Expecto Patronum</p>
       </li>
       <li>
-        <a href="background/dudu.jpg" target="_blank"><img class="foto" src="background/dudu.jpg"
+        <a href="background/dudu.jpg" target="_blank"><img class="foto" data-src="background/dudu.jpg"
             alt="Executando o feitiço (leviosa)" /></a>
         <p>wingardium leviosa</p>
       </li>
       <li>
-        <a href="background/christmas.jpg" target="_blank"><img class="foto" src="background/christmas.jpg"
+        <a href="background/christmas.jpg" target="_blank"><img class="foto" data-src="background/christmas.jpg"
             alt="Natal" /></a>
         <p>Ah o natal... data que tudo fica de um jeitinho mágico. &#127877;&#127996;</p>
       </li>
