--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
   <script src="main.js"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
+    rel="stylesheet">
 </head>
 
 <body id="conteudo">
@@ -60,7 +63,8 @@
 
         <form action="../projeto-coffee-break/index.html" method="post" target="_blank">
           <div class="procura">
-            <input type="search" onblur="desfocar()" onfocus="focar()"  name="search" id="procura" placeholder="Buscar...">
+            <input type="search" onblur="desfocar()" onfocus="focar()" name="search" id="procura"
+              placeholder="Buscar...">
             <input type="submit" value="&#128269;" id="btn">
           </div>
         </form>
@@ -90,7 +94,8 @@
         <p>Carro espacial.</p>
       </li>
       <li>
-        <a href="background/blur.jpg" target="_blank"><img class="foto" data-src="background/blur.jpg" alt="Fotógrafo" /></a>
+        <a href="background/blur.jpg" target="_blank"><img class="foto" data-src="background/blur.jpg"
+            alt="Fotógrafo" /></a>
         <p>A fotografia é uma das poucas coisas que tem poder sobre o tempo: ela o paralisa.</p>
       </li>
       <li>
@@ -100,7 +105,7 @@
       </li>
       <li>
         <a href="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" target="_blank"><img class="foto"
-          data-src="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" alt="portal do tempo" /></a>
+            data-src="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" alt="portal do tempo" /></a>
         <p>Quando você olha muito tempo para o abismo, o abismo olha para você.</p>
       </li>
       <li>
@@ -134,7 +139,6 @@
   <section id="dicas">
     <div class="dicas_conteudo">
       <h3>Algumas dicas simples sobre o painel de camadas para quem está começando.</h3>
-      <hr>
       <ol>
         <li>Antes de por a mão na massa, estude a interface e principalmente o painel de ferramentas que
           aparecerá no lado esquerdo da tela como na foto abaixo ou siga o link &#10145; <a
