--- a/sobre.html
+++ b/sobre.html
@@ -1,66 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <title>Sobre</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/sobre.css">
-    <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
-    <script src="main.js"></script>
-  </head>
-  <body>
-    <div class="barratopo">
-      <ul class="menu">
-        <li><i class="fas fa-home"></i><a href="index.html">Início</a></li>
-        <!-- div para criar uma parra vertical no menu-->
-      </ul>
+
+<head>
+  <title>Sobre</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/sobre.css">
+  <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
+  <script src="main.js"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div class="barratopo">
+    <ul class="menu">
+      <li><i class="fas fa-home"></i><a href="index.html">Início</a></li>
+      <!-- div para criar uma parra vertical no menu-->
+    </ul>
+  </div>
+
+  <!--Conteúdo sobre o autor-->
+  <div class="box-principal-autor">
+    <div class="box-sobre-autor">
+      <img class="minhafoto" src="sobre-fotos/me.jpg" alt="foto do autor"
+        title="Carlos Eduardo. Junior Front And e design">
+      <p>Para começar este breve resumo, gostaria de me apresentar.
+        <br>
+        Eu me chamo Carlos Eduardo, Moro na cidade do Rio de Janeiro, tenho 24 anos e sou
+        apaixonado
+        por tecnologia <i class="fas fa-laptop"></i> e animais. <i class="fas fa-dog"></i>
+      </p>
+      <p> No final de 2018 tive um breve contato com a ferramenta PhotoShop em um trabalho que
+        tive em uma
+        LanHouse, gostei bastante da experiência e desde então resolvi estudar por completo a ferramenta e
+        postar
+        minhas
+        manipulações no Instagram, mas devido ao baixo reconhecimento por este tipo de conteúdo na
+        plataforma,
+        resolvi aprender um pouco de desenvolvimento web para criar um site com minhas ideias sem
+        precisar
+        gastar dinheiro com isso e, assim, publicar meu material e aprender algo novo durante a
+        quarentena... mas acabou que achei incrível e decidi me
+        aprofundar
+        mais no assunto e estudar pra valer.
+      </p>
     </div>
-    <!--Conteúdo sobre o autor-->
-    <div class="box-principal-autor">
-      <div class="box-sobre-autor">
-        <img class="minhafoto" src="sobre-fotos/me.jpg" alt="foto do autor"
-          title="Carlos Eduardo. Junior Front And e design">
-        <p>Para começar este breve resumo, gostaria de me apresentar.
-          <br>
-          Eu me chamo Carlos Eduardo, Moro na cidade do Rio de Janeiro, tenho 24 anos e sou
-          apaixonado
-          por tecnologia <i class="fas fa-laptop"></i> e animais. <i class="fas fa-dog"></i>
-        </p>
-        <p> No final de 2018 tive um breve contato com a ferramenta PhotoShop em um trabalho que
-          tive em uma
-          LanHouse, gostei bastante da experiência e desde então resolvi estudar por completo a ferramenta e
-          postar
-          minhas
-          manipulações no Instagram, mas devido ao baixo reconhecimento por este tipo de conteúdo na
-          plataforma,
-          resolvi aprender um pouco de desenvolvimento web para criar um site com minhas ideias sem
-          precisar
-          gastar dinheiro com isso e, assim, publicar meu material e aprender algo novo durante a
-          quarentena, mas acabou que achei incrível e decidi me
-          aprofundar
-          mais no assunto e estudar pra valer.
-        </p>
-      </div>
+  </div>
+
+  <!--Conteúdo sobre o site-->
+  <div class="box-principal-site">
+    <div class="box-sobre-site">
+      <p>A curto prazo o projeto CoffeBreak foi criado com o intuito de divulgar manipulações criadas por mim
+        com o Photoshop, mas durante o desenvolvimento da página me veio os seguintes planos em mente: E se
+        ao invés de publicar fotos feitas só por mim, também tivesse um espaço para artistas? que queiram
+        divulgar seu trabalho de forma simples, sem gastar com isso e em uma plataforma totalmente
+        brasileira aonde os artistas tenham total reconhecimento pelo seu trabalho e, assim, encontrar o
+        combustível para que se mantenham motivados.
+      </p>
     </div>
-    <!--Conteúdo sobre o site-->
-    <div class="box-principal-site">
-      <div class="box-sobre-site">
-        <p>A curto prazo o projeto CoffeBreak foi criado com o intuito de divulgar manipulações criadas por mim
-          com o Photoshop, mas durante o desenvolvimento da página me veio os seguintes planos em mente: E se
-          ao invés de publicar fotos feitas só por mim, também tivesse um espaço para artistas? que queiram
-          divulgar seu trabalho de forma simples, sem gastar com isso e em uma plataforma totalmente
-          brasileira aonde os artistas tenham total reconhecimento pelo seu trabalho, e assim, encontrar o
-          combustível para que se mantenham motivados.
-        </p>
-      </div>
-    </div>
-    <footer>
-      <div class="rodape">
-        <span>Criado por Carlos
+  </div>
+
+  <footer>
+    <div class="rodape">
+      <span>Criado por Carlos
         Eduardo ©
         2020. Todos os direitos reservados.</span>
-      </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
