--- a/agradecimentos.html
+++ b/agradecimentos.html
@@ -1,55 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agradecimentos</title>
-    <link rel="stylesheet" href="css/agradecimentos.css">
-    <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <header>
-      <div class="barra-cabecalho">
-        <ul>
-          <li><a href="index.html"><i class="fas fa-home"></i> Início</a></li>
-        </ul>
-      </div>
-    </header>
-    <div class="container">
-      <h2>Agradecimento aos artistar que tiveram suas imagens usadas em manipulações.</h2>
-      <br>
-      <ul class="lista">
-        <li>
-          Meltys-stock <i class="fas fa-caret-down"></i>
-          <p>Artista por <a href="https://www.deviantart.com/meltys-stock/gallery" target="_blank"> deviantart</a>
-          </p>
-        </li>
-        <li>
-          lumibear <i class="fas fa-caret-down"></i>
-          <p>artista por <a href="https://www.deviantart.com/lumibear" target="_blank">deviantart</a></p>
-        </li>
-        <li>
-          CamaroGirl666 <i class="fas fa-caret-down"></i>
-          <p>artista por <a href="https://www.deviantart.com/camarogirl666/favourites/12112346/model-stocks"
-            target="_blank">deviantart</a></p>
-        </li>
-        <li>
-          Rowan Heuvel <i class="fas fa-caret-down"></i>
-          <p>artista por <a href="https://unsplash.com/@insolitus" target="_blank">unsplash</a></p>
-        </li>
-        <li>
-          SenshiStock <i class="fas fa-caret-down"></i>
-          <p>artista por <a href="https://www.deviantart.com/senshistock/gallery" target="_blank">deviantart</a></p>
-        </li>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Agradecimentos</title>
+  <link rel="stylesheet" href="css/agradecimentos.css">
+  <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
+  <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <div>
+      <ul>
+        <li><a href="index.html"><i class="fas fa-home"></i> Início</a></li>
       </ul>
     </div>
-    <footer>
-      <div class="rodape">
-        <span>Criado por Carlos
+  </header>
+
+  <div class="container">
+    <h2>Agradecimento aos artistar que tiveram suas imagens usadas em manipulações.</h2>
+    <ul class="lista">
+      <li>
+        Meltys-stock <i class="fas fa-caret-down"></i>
+        <p>Artista por <a href="https://www.deviantart.com/meltys-stock/gallery" target="_blank"> deviantart</a>
+        </p>
+      </li>
+      <li>
+        lumibear <i class="fas fa-caret-down"></i>
+        <p>artista por <a href="https://www.deviantart.com/lumibear" target="_blank">deviantart</a></p>
+      </li>
+      <li>
+        CamaroGirl666 <i class="fas fa-caret-down"></i>
+        <p>artista por <a href="https://www.deviantart.com/camarogirl666/favourites/12112346/model-stocks"
+            target="_blank">deviantart</a></p>
+      </li>
+      <li>
+        Rowan Heuvel <i class="fas fa-caret-down"></i>
+        <p>artista por <a href="https://unsplash.com/@insolitus" target="_blank">unsplash</a></p>
+      </li>
+      <li>
+        SenshiStock <i class="fas fa-caret-down"></i>
+        <p>artista por <a href="https://www.deviantart.com/senshistock/gallery" target="_blank">deviantart</a></p>
+      </li>
+    </ul>
+  </div>
+  
+  <footer>
+    <div class="rodape">
+      <span>Criado por Carlos
         Eduardo ©
         2020. Todos os direitos reservados.</span>
-      </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
