--- a/animais.html
+++ b/animais.html
@@ -10,6 +10,9 @@
   <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
   <script src="main.js"></script>
   <link rel="stylesheet" href="css/animais.css" type="text/css">
+  <link
+  href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
+  rel="stylesheet">
 </head>
 
 <body id="conteudo">
