--- a/fantasia.html
+++ b/fantasia.html
@@ -10,6 +10,9 @@
   <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
   <script src="main.js"></script>
   <link rel="stylesheet" href="css/fantasia.css" type="text/css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
+    rel="stylesheet">
 </head>
 
 <body id="conteudo">
@@ -46,7 +49,7 @@
     </div>
     <div class="subcabecalho-fantasia">
       <div class="conteudo-subcabecalho-fantasia">
-        <h1>Mundo da fantasia<span class="barra">!</span></h1>
+        <h1>Mundo da fantasia<span class="barra">_</span></h1>
         <h4>Imagens espetaculares criadas de artistas para artistas.</h4>
       </div>
       <div class="autor">
