--- a/fantasia.html
+++ b/fantasia.html
@@ -4,7 +4,6 @@
 <head>
   <title>Fantasia</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/coffeebreak.css" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
@@ -47,8 +46,8 @@
         </ul>
       </nav>
     </div>
-    <div class="subcabecalho-fantasia">
-      <div class="conteudo-subcabecalho-fantasia">
+    <div class="subcabecalho">
+      <div class="conteudo-subcabecalho">
         <h1>Mundo da fantasia<span class="barra">_</span></h1>
         <h4>Imagens espetaculares criadas de artistas para artistas.</h4>
       </div>
@@ -58,7 +57,7 @@
     </div>
   </header>
   <!--Começo da galeria de imagens-->
-  <div id="galeria" class="container-galeria_fantasia">
+  <div id="galeria" class="container-galeria">
     <ul class="galeria">
       <li>
         <a href="background/alien-cat.jpg" target="_blank"><img class="foto" data-src="background/alien-cat.jpg"
