--- a/sobre.html
+++ b/sobre.html
@@ -53,7 +53,7 @@
   <!--Conteúdo sobre o site-->
   <div class="box-principal-site">
     <div class="box-sobre-site">
-      <p>A curto prazo o projeto CoffeBreak foi criado com o intuito de divulgar manipulações criadas por mim
+      <p>A curto prazo o projeto CoffeeBreak foi criado com o intuito de divulgar manipulações criadas por mim
         com o Photoshop, mas durante o desenvolvimento da página me veio os seguintes planos em mente: E se
         ao invés de publicar fotos feitas só por mim, também tivesse um espaço para artistas? que queiram
         divulgar seu trabalho de forma simples, sem gastar com isso e em uma plataforma totalmente
