--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
-  <script src="main.js"></script>
   <link
     href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
     rel="stylesheet">
@@ -38,12 +37,12 @@
       </ul>
 
       <nav class="menu-mobile">
-        <img class="icon-menu" onclick="mudar()" src="icones/iconfinder_basics-12_296823.png" alt="ícone do menu">
+        <img class="icon-menu" onclick="change()" src="icones/iconfinder_basics-12_296823.png" alt="ícone do menu">
         <ul class="sub">
           <li><a href="sobre.html">Sobre</a></li>
           <li class="linhas-menu"><a href="#dicas">Dicas</a></li>
           <li><a href="agradecimentos.html">agradecimentos</a></li>
-          <li onclick="mudar2()">
+          <li onclick="change_sub()">
             galeria<i class="fas fa-angle-down"></i>
             <ul class="subGaleria">
               <li><a href="#">Paisagens</a></li>
@@ -58,12 +57,12 @@
 
     <div class="subcabecalho">
       <div class="conteudo-subcabecalho">
-        <h1>Sejam bem-vindos ao universo da imaginação<span class="barra">_</span></h1>
+        <h1 class="type"></h1>
         <h4>Imagens espetaculares criadas de artistas para artistas.</h4>
 
-        <form action="../projeto-coffee-break/index.html" method="post" target="_blank">
+        <form action="http://www.google.com/custom" method="GET" target="_blank">
           <div class="procura">
-            <input type="search" onblur="desfocar()" onfocus="focar()" name="search" id="procura"
+            <input type="search" onfocus=" focusOn()" onblur="focusOff()" name="search" id="procura"
               placeholder="Buscar...">
             <input type="submit" value="&#128269;" id="btn">
           </div>
@@ -124,9 +123,9 @@
         <p>Expecto Patronum</p>
       </li>
       <li>
-        <a href="background/dudu.jpg" target="_blank"><img class="foto" data-src="background/dudu.jpg"
-            alt="Executando o feitiço (leviosa)" /></a>
-        <p>wingardium leviosa</p>
+        <a href="background/snowweb.jpg" target="_blank"><img class="foto" data-src="background/snowweb.jpg"
+            alt="natal" /></a>
+        <p>#</p>
       </li>
       <li>
         <a href="background/christmas.jpg" target="_blank"><img class="foto" data-src="background/christmas.jpg"
@@ -181,6 +180,10 @@
         2020. Todos os direitos reservados. </span>
     </div>
   </footer>
+
+  <script src="scripts/functions.js"></script>
+  <script src="scripts/pace.min.js"></script>
+
 </body>
 
 </html>
