--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
   </div>
 
   <section id="dicas">
+    <img id="rock" src="icones/icons8-rock-48.png" alt="rocha">
     <div class="dicas_conteudo">
       <h3>Algumas dicas simples sobre o painel de camadas para quem está começando.</h3>
       <ol>
