--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-<html lang='pt-br'>
+<html lang="pt-br">
 
 <head>
-  <title>CoffeeBreak - Fotos incríveis criadas de artistas para artistas</title>
-  <meta charset="UTF-8">
-  <meta name=”description”
-    content="Plataforma criada especialmente para você que gosta de manipular imagens e quer divulgar seu trabalho de uma forma simples e em um ambiente totalmente em português.">
-  <link rel="stylesheet" href="css/coffeebreak.css" type="text/css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
+  <title>
+    CoffeeBreak - Fotos incríveis criadas de artistas para artistas
+  </title>
+  <meta charset="UTF-8" />
+  <meta name="”description”"
+    content="Plataforma criada especialmente para você que gosta de manipular imagens e quer divulgar seu trabalho de uma forma simples e em um ambiente totalmente em português." />
+  <link rel="stylesheet" href="css/coffeebreak.css" type="text/css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon" />
   <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
   <link
     href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
-    rel="stylesheet">
+    rel="stylesheet" />
 </head>
 
 <body id="conteudo">
-
   <header>
     <div id="top" class="container-cabecalho">
-      <a href="index.html"> <img src="logos/mug_coffee.png" alt="logo" title="Clique para voltar ao início"></a>
+      <a href="index.html">
+        <img src="logos/mug_coffee.png" alt="logo" title="Clique para voltar ao início" /></a>
 
       <ul class="menu">
         <li class="linhas-menu">
@@ -31,13 +33,15 @@
             <li><a href="fantasia.html">Fantasia</a></li>
           </ul>
         </li>
-        <li class="linhas-menu"><a href="agradecimentos.html">Agradecimentos</a></li>
+        <li class="linhas-menu">
+          <a href="agradecimentos.html">Agradecimentos</a>
+        </li>
         <li class="linhas-menu"><a href="#dicas">Dicas</a></li>
         <li class="linhas-menu"><a href="sobre.html">Sobre</a></li>
       </ul>
 
       <nav class="menu-mobile">
-        <img class="icon-menu" onclick="change()" src="icones/iconfinder_basics-12_296823.png" alt="ícone do menu">
+        <img class="icon-menu" onclick="change()" src="icones/iconfinder_basics-12_296823.png" alt="ícone do menu" />
         <ul class="sub">
           <li><a href="sobre.html">Sobre</a></li>
           <li class="linhas-menu"><a href="#dicas">Dicas</a></li>
@@ -59,18 +63,10 @@
       <div class="conteudo-subcabecalho">
         <h1 class="type"></h1>
         <h4>Imagens espetaculares criadas de artistas para artistas.</h4>
-
-        <form action="http://www.google.com/custom" method="GET" target="_blank">
-          <div class="procura">
-            <input type="search" onfocus=" focusOn()" onblur="focusOff()" name="search" id="procura"
-              placeholder="Buscar...">
-            <input type="submit" value="&#128269;" id="btn">
-          </div>
-        </form>
-
       </div>
       <div class="autor">
-        <span>Foto por <a href="https://unsplash.com/@scheier" target="_blank">@scheier</a></span>
+        <span>Foto por
+          <a href="https://unsplash.com/@scheier" target="_blank">@scheier</a></span>
       </div>
     </div>
   </header>
@@ -85,7 +81,10 @@
       <li>
         <a href="background/1080.jpg" target="_blank"><img class="foto" data-src="background/1080.jpg"
             alt="Navegando no espaço" /></a>
-        <p>A felicidade pode ser encontrada mesmo nas horas mais difíceis, se você lembrar de acender a luz.</p>
+        <p>
+          A felicidade pode ser encontrada mesmo nas horas mais difíceis, se
+          você lembrar de acender a luz.
+        </p>
       </li>
       <li>
         <a href="background/spacecar.jpg" target="_blank"><img class="foto" data-src="background/spacecar.jpg"
@@ -95,7 +94,10 @@
       <li>
         <a href="background/blur.jpg" target="_blank"><img class="foto" data-src="background/blur.jpg"
             alt="Fotógrafo" /></a>
-        <p>A fotografia é uma das poucas coisas que tem poder sobre o tempo: ela o paralisa.</p>
+        <p>
+          A fotografia é uma das poucas coisas que tem poder sobre o tempo:
+          ela o paralisa.
+        </p>
       </li>
       <li>
         <a href="background/tinta.jpg" target="_blank"><img class="foto" data-src="background/tinta.jpg"
@@ -105,7 +107,9 @@
       <li>
         <a href="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" target="_blank"><img class="foto"
             data-src="background/alone_in_the_dark_25_by_null_entity_de07nhp3.jpg" alt="portal do tempo" /></a>
-        <p>Quando você olha muito tempo para o abismo, o abismo olha para você.</p>
+        <p>
+          Quando você olha muito tempo para o abismo, o abismo olha para você.
+        </p>
       </li>
       <li>
         <a href="background/web-min.jpg" target="_blank"><img class="foto" data-src="background/web-min.jpg"
@@ -130,37 +134,52 @@
       <li>
         <a href="background/christmas.jpg" target="_blank"><img class="foto" data-src="background/christmas.jpg"
             alt="Natal" /></a>
-        <p>Ah o natal... data que tudo fica de um jeitinho mágico. &#127877;&#127996;</p>
+        <p>
+          Ah o natal... data que tudo fica de um jeitinho mágico.
+          &#127877;&#127996;
+        </p>
       </li>
     </ul>
   </div>
 
   <section id="dicas">
-    <img id="rock" src="icones/icons8-rock-48.png" alt="rocha">
+    <img id="rock" src="icones/icons8-rock-48.png" alt="rocha" />
     <div class="dicas_conteudo">
-      <h3>Algumas dicas simples sobre o painel de camadas para quem está começando.</h3>
+      <h3>
+        Algumas dicas simples sobre o painel de camadas para quem está
+        começando.
+      </h3>
       <ol>
-        <li>Antes de por a mão na massa, estude a interface e principalmente o painel de ferramentas que
-          aparecerá no lado esquerdo da tela como na foto abaixo ou siga o link &#10145; <a
-            href="https://helpx.adobe.com/br/photoshop/using/tools.html" target="_blank">Clique aqui para
-            saber mais.</a>
-          <img class="foto" data-src="dicas/painel.jpg" alt="Interface Photoshop">
+        <li>
+          Antes de por a mão na massa, estude a interface e principalmente o
+          painel de ferramentas que aparecerá no lado esquerdo da tela como na
+          foto abaixo ou siga o link &#10145;
+          <a href="https://helpx.adobe.com/br/photoshop/using/tools.html" target="_blank">Clique aqui para saber
+            mais.</a>
+          <img class="foto" data-src="dicas/painel.jpg" alt="Interface Photoshop" />
         </li>
-        <li>Para entender como a seção de camadas funciona, pegue 2 fotos com fundo transparente(.png), clique
-          em <strong>arquivos</strong> na barra superior da tela, depois clique em (novo) e escolha o tamanho da sua
-          imagem... Fazendo isso, volte ao painel superior e clique em abrir e escolha as 2 imagens de formato(.png).
-          <img class="foto" data-src="dicas/novo.jpg" alt="Interface Photoshop">
-          <img class="foto" data-src="dicas/tamanho.jpg" alt="Interface Photoshop">
-          <img class="foto" data-src="dicas/criar.jpg" alt="Interface Photoshop">
+        <li>
+          Para entender como a seção de camadas funciona, pegue 2 fotos com
+          fundo transparente(.png), clique em <strong>arquivos</strong> na
+          barra superior da tela, depois clique em (novo) e escolha o tamanho
+          da sua imagem... Fazendo isso, volte ao painel superior e clique em
+          abrir e escolha as 2 imagens de formato(.png).
+          <img class="foto" data-src="dicas/novo.jpg" alt="Interface Photoshop" />
+          <img class="foto" data-src="dicas/tamanho.jpg" alt="Interface Photoshop" />
+          <img class="foto" data-src="dicas/criar.jpg" alt="Interface Photoshop" />
         </li>
-        <li>Após abrir, clique no cadeado ao lado da foto para destravar e arraste a foto para a página que você
-          criou, faça isso com as 2 imagens.
-          <img class="foto" data-src="dicas/arrasta.jpg" alt="Interface Photoshop">
+        <li>
+          Após abrir, clique no cadeado ao lado da foto para destravar e
+          arraste a foto para a página que você criou, faça isso com as 2
+          imagens.
+          <img class="foto" data-src="dicas/arrasta.jpg" alt="Interface Photoshop" />
         </li>
-        <li>Repare na camada de ajustes... você tem 2 fotinhas uma em baixo da outra... se clicar na fotinha de
-          baixo e arrastar pra cima, essa imagem vai sobrepor a outra como mostra a foto abaixo.
-          <img class="foto" data-src="dicas/camada1.jpg" alt="Interface Photoshop">
-          <img class="foto" data-src="dicas/camada2.jpg" alt="Interface Photoshop">
+        <li>
+          Repare na camada de ajustes... você tem 2 fotinhas uma em baixo da
+          outra... se clicar na fotinha de baixo e arrastar pra cima, essa
+          imagem vai sobrepor a outra como mostra a foto abaixo.
+          <img class="foto" data-src="dicas/camada1.jpg" alt="Interface Photoshop" />
+          <img class="foto" data-src="dicas/camada2.jpg" alt="Interface Photoshop" />
         </li>
       </ol>
     </div>
@@ -169,22 +188,27 @@
   <!--Fim galeria-->
   <footer>
     <div id="contatos" class="conteudo-rodape">
-      <span>Agradecemos por sua visita!<br>Site em constante manutenção para o seu melhor proveito.</span>
-      <br>
-      <p id="report">Contato <a href="mailto:carlosmelo1295@gmail.com">carlosmelo1295@gmail.com</a></p>
+      <span>Agradecemos por sua visita!<br />Site em constante manutenção para o
+        seu melhor proveito.</span>
+      <br />
+      <p id="report">
+        Contato
+        <a href="mailto:carlosmelo1295@gmail.com">carlosmelo1295@gmail.com</a>
+      </p>
       <div class="redes">
         <a href="https://github.com/Tklao/projeto-coffee-break" target="_blank"><i class="fab fa-github-square"></i></a>
         <a href="https://www.instagram.com/coffeebreak.art/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <button class="botao" onclick="window.location.href='direitos.html'">Direitos</button>
+        <button class="botao" onclick="window.location.href='direitos.html'">
+          Direitos
+        </button>
       </div>
-      <span>Criado por Carlos Eduardo ©
-        2020. Todos os direitos reservados. </span>
+      <span>Criado por Carlos Eduardo © 2020. Todos os direitos reservados.
+      </span>
     </div>
   </footer>
 
   <script src="scripts/functions.js"></script>
   <script src="scripts/pace.min.js"></script>
-
 </body>
 
 </html>
